Add infotexture intro to comment

--- a/css/theme/infotexture.css
+++ b/css/theme/infotexture.css
@@ -1,4 +1,7 @@
 /**
+ * The 'infotexture' theme for reveal.js presentations
+ * is based on the simple theme provided by reveal.js.
+ *
  * A simple theme for reveal.js presentations, similar
  * to the default theme. The accent color is darkblue.
  *
