--- a/css/theme/source/infotexture.scss
+++ b/css/theme/source/infotexture.scss
@@ -23,16 +23,19 @@
 
 
 // Override theme settings (see ../template/settings.scss)
-$mainFont: 'Lato', sans-serif;
+$mainFont: "Adobe Caslon Pro";
 $mainColor: #000;
-$headingFont: 'News Cycle', Impact, sans-serif;
-$headingColor: #000;
+$headingFont: "Myriad Pro";
+$headingColor: #006;
 $headingTextShadow: none;
 $headingTextTransform: none;
 $backgroundColor: #fff;
-$linkColor: #00008B;
+$linkColor: #009;
 $linkColorHover: lighten( $linkColor, 20% );
-$selectionBackgroundColor: rgba(0, 0, 0, 0.99);
+
+// Text selection
+$selectionBackgroundColor: #191970;
+$selectionColor: #f5f5f5;
 
 section.has-dark-background {
 	&, h1, h2, h3, h4, h5, h6 {
@@ -40,7 +43,22 @@ section.has-dark-background {
 	}
 }
 
+$headingFontWeight: bold;
+$font-family-monospace:   "SF Mono", Menlo, Monaco, Consolas, "Courier New", monospace !default;
 
 // Theme template ------------------------------
 @import "../template/theme";
 // ---------------------------------------------
+
+// Override rules from theme template
+
+.reveal code {
+	font-family: $font-family-monospace;
+  font-size: 0.8em;
+  color: #888;
+}
+
+.reveal blockquote {
+  color: #888;
+}
+
