--- a/css/theme/infotexture.css
+++ b/css/theme/infotexture.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /**
  * The 'infotexture' theme for reveal.js presentations
  * is based on the simple theme provided by reveal.js.
@@ -275,6 +276,34 @@ body {
 
 .reveal blockquote {
   color: #888; }
+
+.reveal .controls .navigate-left,
+.reveal .controls .navigate-left.enabled {
+  border-right-color: #009; }
+
+.reveal .controls .navigate-right,
+.reveal .controls .navigate-right.enabled {
+  border-left-color: #009; }
+
+.reveal .controls .navigate-up,
+.reveal .controls .navigate-up.enabled {
+  border-bottom-color: #009; }
+
+.reveal .controls .navigate-down,
+.reveal .controls .navigate-down.enabled {
+  border-top-color: #009; }
+
+.reveal .controls .navigate-left.enabled:hover {
+  border-right-color: tran­spa­ren­tiz­e(#009, 10%); }
+
+.reveal .controls .navigate-right.enabled:hover {
+  border-left-color: tran­spa­ren­tiz­e(#009, 20%); }
+
+.reveal .controls .navigate-up.enabled:hover {
+  border-bottom-color: tran­spa­ren­tiz­e(#009, 50%); }
+
+.reveal .controls .navigate-down.enabled:hover {
+  border-top-color: tran­spa­ren­tiz­e(#009, 50%); }
 
 .reveal .progress span {
   background: #009; }
