--- a/css/theme/source/infotexture.scss
+++ b/css/theme/source/infotexture.scss
@@ -99,7 +99,7 @@ $font-family-monospace:   "SF Mono", Menlo, Monaco, Consolas, "Courier New", mon
 
 // GitPitch menu
 
-.gp-menu .slide-menu-button {
+.gp-menu-bars {
   color: #AAA;
   
   :hover {
