Restore muted icon support

--- a/css/theme/source/infotexture.scss
+++ b/css/theme/source/infotexture.scss
@@ -106,3 +106,9 @@ $font-family-monospace:   "SF Mono", Menlo, Monaco, Consolas, "Courier New", mon
   	color: $linkColorHover ;
   }
 }
+
+// Muted icons
+
+.icon-muted, .muted {
+	color: #eee;
+}
