Fix hover syntax

--- a/css/theme/source/infotexture.scss
+++ b/css/theme/source/infotexture.scss
@@ -102,7 +102,7 @@ $font-family-monospace:   "SF Mono", Menlo, Monaco, Consolas, "Courier New", mon
 .gp-menu-bars {
   color: #AAA;
   
-  :hover {
+  &:hover {
   	color: $linkColorHover ;
   }
 }
