--- a/css/theme/source/infotexture.scss
+++ b/css/theme/source/infotexture.scss
@@ -112,3 +112,12 @@ $font-family-monospace:   "SF Mono", Menlo, Monaco, Consolas, "Courier New", mon
 .icon-muted, .muted {
 	color: #eee;
 }
+
+// Background logo
+
+#gp-logo {
+	&::after {
+		color: lime;
+		content: ' ❮•❯';
+	}
+}
