--- a/css/theme/source/infotexture.scss
+++ b/css/theme/source/infotexture.scss
@@ -60,8 +60,8 @@ $font-family-monospace:   "SF Mono", Menlo, Monaco, Consolas, "Courier New", mon
 
 .reveal blockquote {
   color: #888;
+  padding: 2em;
   text-align: left;
-  border-left: 3px solid #888;
   width: 88%;
 }
 
