--- a/css/theme/source/infotexture.scss
+++ b/css/theme/source/infotexture.scss
@@ -60,7 +60,7 @@ $font-family-monospace:   "SF Mono", Menlo, Monaco, Consolas, "Courier New", mon
 
 .reveal blockquote {
   color: #888;
-  padding: 2em;
+  padding: 10px;
   text-align: left;
   width: 88%;
 }
