--- a/css/theme/infotexture.css
+++ b/css/theme/infotexture.css
@@ -274,8 +274,8 @@ body {
   color: #888; }
 
 .reveal blockquote {
+  box-shadow: none;
   color: #888;
-  padding: 10px;
   text-align: left;
   width: 88%; }
 
