--- a/css/theme/source/infotexture.scss
+++ b/css/theme/source/infotexture.scss
@@ -59,8 +59,8 @@ $font-family-monospace:   "SF Mono", Menlo, Monaco, Consolas, "Courier New", mon
 }
 
 .reveal blockquote {
+  box-shadow:none;
   color: #888;
-  padding: 10px;
   text-align: left;
   width: 88%;
 }
