--- a/css/theme/infotexture.css
+++ b/css/theme/infotexture.css
@@ -279,6 +279,11 @@ body {
   text-align: left;
   width: 88%; }
 
+.reveal section img {
+  background: none;
+  border: none;
+  box-shadow: none; }
+
 .reveal .controls .navigate-left,
 .reveal .controls .navigate-left.enabled {
   border-right-color: #009; }
