--- a/css/theme/source/infotexture.scss
+++ b/css/theme/source/infotexture.scss
@@ -65,6 +65,12 @@ $font-family-monospace:   "SF Mono", Menlo, Monaco, Consolas, "Courier New", mon
   width: 88%;
 }
 
+.reveal section img {
+  background:none; 
+  border:none; 
+  box-shadow:none;
+}
+
 // Enforce link color on controls
 
 .reveal .controls .navigate-left,
