Adjust letter spacing per Inter UI recommendations
https://rsms.me/inter/dynmetrics

36 & 40px: -0.017em

--- a/css/theme/inter-ui.css
+++ b/css/theme/inter-ui.css
@@ -56,7 +56,7 @@ body {
   font-family: "Inter UI", sans-serif;
   font-weight: bold;
   line-height: 1.2;
-  letter-spacing: normal;
+  letter-spacing: -0.017em;
   text-transform: none;
   text-shadow: none;
   word-wrap: break-word; }
@@ -282,6 +282,9 @@ body {
 @supports (font-variation-settings: normal) {
   .reveal {
     font-family: 'Inter UI var alt', sans-serif; } }
+
+.reveal {
+  letter-spacing: -0.017em; }
 
 .reveal code {
   font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
