--- a/css/theme/inter.css
+++ b/css/theme/inter.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 /**
- * The 'Inter UI' theme for reveal.js presentations
+ * The 'Inter ~UI~' theme for reveal.js presentations
  * is based on the simple theme provided by reveal.js.
- * Uses the Inter UI font family · https://rsms.me/inter
+ * Uses the Inter font family · https://rsms.me/inter
  *
  * A simple theme for reveal.js presentations, similar
  * to the default theme. The accent color is darkblue.
@@ -10,7 +10,7 @@
  * This theme is Copyright (C) 2012 Owen Versteeg, https://github.com/StereotypicalApps. It is MIT licensed.
  * reveal.js is Copyright (C) 2011-2012 Hakim El Hattab, http://hakim.se
  */
-@import url("https://rsms.me/inter/inter-ui.css");
+@import url("https://rsms.me/inter/inter.css");
 section.has-dark-background, section.has-dark-background h1, section.has-dark-background h2, section.has-dark-background h3, section.has-dark-background h4, section.has-dark-background h5, section.has-dark-background h6 {
   color: #fff; }
 
@@ -22,7 +22,7 @@ body {
   background-color: #fff; }
 
 .reveal {
-  font-family: "Inter UI", sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 36px;
   font-weight: normal;
   color: #000; }
@@ -53,7 +53,7 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #006;
-  font-family: "Inter UI", sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: bold;
   line-height: 1.2;
   letter-spacing: -0.017em;
@@ -281,7 +281,7 @@ body {
 
 @supports (font-variation-settings: normal) {
   .reveal {
-    font-family: 'Inter UI var alt', sans-serif; } }
+    font-family: 'Inter var', sans-serif; } }
 
 .reveal {
   letter-spacing: -0.017em; }
