--- a/css/theme/source/inter.scss
+++ b/css/theme/source/inter.scss
@@ -1,7 +1,7 @@
 /**
- * The 'Inter UI' theme for reveal.js presentations
+ * The 'Inter ~UI~' theme for reveal.js presentations
  * is based on the simple theme provided by reveal.js.
- * Uses the Inter UI font family · https://rsms.me/inter
+ * Uses the Inter font family · https://rsms.me/inter
  *
  * A simple theme for reveal.js presentations, similar
  * to the default theme. The accent color is darkblue.
@@ -19,15 +19,15 @@
 
 
 // Include theme-specific fonts
-@import url('https://rsms.me/inter/inter-ui.css');
+@import url('https://rsms.me/inter/inter.css');
 
 // Override theme settings (see ../template/settings.scss)
-$mainFont: 'Inter UI', sans-serif;
+$mainFont: 'Inter', sans-serif;
 $mainFontSize: 36px;
 $mainColor: #000;
 
 // Headings
-$headingFont: 'Inter UI', sans-serif;
+$headingFont: 'Inter', sans-serif;
 $headingColor: #006;
 $headingTextShadow: none;
 $headingLetterSpacing: -0.017em;
@@ -59,7 +59,7 @@ $font-family-monospace:   SFMono-Regular, Menlo, Monaco, Consolas, "Liberation M
 // Override rules from theme template
 
 @supports (font-variation-settings: normal) {
-  .reveal { font-family: 'Inter UI var alt', sans-serif; }
+  .reveal { font-family: 'Inter var', sans-serif; }
 }
 
 .reveal {
